--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.12",
+    "@vicons/ionicons4": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "commitizen": "^4.3.0",
     "naive-ui": "^2.34.3",
     "sass": "^1.62.0",
     "typescript": "^4.9.3",
