--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.6",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
