--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pinia-plugin-persistedstate": "^3.1.0",
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.12",
