--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "pubsub-js": "^1.9.4",
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^18.15.12",
     "@types/nprogress": "^0.2.0",
+    "@types/pubsub-js": "^1.8.3",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons4": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
