--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "artplayer": "^5.0.4",
     "axios": "^1.3.6",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
@@ -17,6 +18,7 @@
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-video-play": "^1.3.1-beta.6",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
