--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "pubsub-js": "^1.9.4",
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
+    "vue-audio-player-plus": "^1.0.10",
     "vue-router": "^4.1.6",
+    "vue3-audio-player": "^1.0.7",
     "vue3-video-play": "^1.3.1-beta.6",
     "webpack-merge": "^5.8.0"
   },
