--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
     "vue-audio-player-plus": "^1.0.10",
+    "vue-img-cutter": "^3.0.3",
     "vue-router": "^4.1.6",
     "vue3-audio-player": "^1.0.7",
     "vue3-video-play": "^1.3.1-beta.6",
